# coactra

./: .gitignore  ASSESSMENT.md  CHANGELOG.md  CHATBOT_KNOWLEDGE_BASE.md  CONTRIBUTING.md  IMPROVEMENT_BACKLOG.md  LIBRARIES.md  Makefile  PROJECT_DOSSIER.md  README.md  RESEARCH-VERDICTS.md  SECURITY.md  TARGET_ARCHITECTURE.md  TENANCY-AUDIT.md  mkdocs.yml
agent/: DESIGN.md  PLAN.md  README.md  pyproject.toml
agent/tests/: test_a2a_adapter.py  test_a2a_server.py  test_adapter_stubs.py  test_agent.py  test_collaboration.py  test_conformance.py  test_delegation.py  test_identity.py  test_integrations_adapters.py  test_integrations_factory.py  test_keycloak_adapter.py  test_mounting.py  test_packaging.py  test_ports.py  test_public_api.py  test_routing.py  test_scope.py  test_tools.py
agent/tests/sdk/: test_events.py  test_models.py  test_runtime.py  test_runtime_stream.py
coactra/: README.md  pyproject.toml
coactra/scripts/: check_clean_install.py  check_live_backends.py  check_no_legacy_paths.py
coactra/src/coactra/: __init__.py  __main__.py  _routing.py  _version.py  cli.py  errors.py  kernel.py  plugins.py  policy.py  scope.py
coactra/tests/: test_base_install.py  test_cli.py  test_docs_imports.py  test_examples.py  test_kernel.py  test_missing_extras_errors.py  test_packaging.py  test_policy.py  test_scope.py  test_shim_deprecation.py
coactra/tests/agent/: test_a2a_adapter.py  test_a2a_server.py  test_acceptance_live.py  test_agent.py  test_agent_surface.py  test_async_identity.py  test_auth.py  test_checkpoint.py  test_collaboration.py  test_conformance.py  test_events.py  test_facade.py  test_facade_peers.py  test_gateway.py  test_identity.py  test_integration.py  test_integrations_factory.py  test_keycloak_adapter.py  test_learned_procedures.py  test_litellm_model.py  test_live_opencode_agent.py  test_live_opencode_workflow.py  test_live_zen_agent.py  test_mcp_stdio_integration.py  test_mcp_transports.py  test_memory.py  test_mounting.py  test_packaging.py  test_peers.py  test_planner.py  test_playbook_store.py  test_ports.py  test_public_api.py  test_registry.py  test_runtime.py  test_runtime_stream.py  test_scope.py  test_scope_wiring.py  test_serve.py  test_skills.py  (+7 more)
coactra/tests/ai/: test_chroma_adapter.py  test_client.py  test_embedding.py  test_gate.py  test_lifelong.py  test_live_zen.py  test_models.py  test_packaging.py  test_protocols.py  test_store.py  test_tokens.py
coactra/tests/arch/: test_boundaries.py  test_default_suite_no_live.py
coactra/tests/directory/: test_authorization.py  test_errors.py  test_hierarchy.py  test_isolation.py  test_packaging.py  test_public_api.py  test_routing.py  test_service.py  test_store_directory.py
coactra/tests/fixtures/: mcp_math_server.py
coactra/tests/jobs/: test_durable_orchestrator.py  test_orchestrator.py  test_routing.py  test_workflow_scope.py
coactra/tests/lib-ai/: test_packaging.py
coactra/tests/memory/: test_authorization.py  test_backend_protocol.py  test_conformance.py  test_export.py  test_facade.py  test_factory.py  test_graphiti_ai_integration.py  test_graphiti_backend.py  test_graphiti_group_id.py  test_inprocess.py  test_isolation.py  test_live_integration.py  test_mem0_backend.py  test_packaging.py  test_public_api.py  test_routing.py  test_types.py
coactra/tests/model/: test_public_api.py  test_resolver.py
coactra/tests/team/: test_public_api.py  (+1 more)
lib-ai/: DESIGN.md  PLAN.md  README.md  pyproject.toml
lib-ai/tests/: test_chroma_adapter.py  test_client.py  test_embedding.py  test_engine.py  test_gate.py  test_live_zen.py  test_models.py  test_packaging.py  test_protocols.py  test_public_api.py  test_routing.py  test_store.py
memory/: DESIGN.md  PLAN.md  README.md  pyproject.toml
memory/tests/: test_adapter_stubs.py  test_backend_protocol.py  test_capabilities.py  test_export.py  test_facade.py  test_factory.py  test_graphiti_ai_integration.py  test_graphiti_backend.py  test_graphiti_group_id.py  test_inprocess.py  test_inprocess_recall.py  test_isolation.py  test_live_integration.py  test_mem0_backend.py  test_models.py  test_packaging.py  test_public_api.py  test_routing.py  test_scope.py  test_types.py
orchestration/: README.md  pyproject.toml
orchestration/docs/: PROCEDURES.md  WORK-ORDERS.md
orchestration/tests/: test_durable_orchestrator.py  test_orchestrator.py  test_routing.py  test_work_adapters.py  test_work_conformance.py  test_work_plan_receipts_mcp.py  test_work_public_api.py  test_work_sql_store.py  test_workflow_durable.py  test_workflow_durable_langgraph.py  test_workflow_metadata.py  test_workflow_store.py
organization/: DESIGN.md  PLAN.md  README.md  pyproject.toml
organization/tests/: conftest.py  test_adapter_stub.py  test_async_postgres_store.py  test_authorization.py  test_company_control.py  test_domain_directory_metadata.py  test_domain_lifecycle.py  test_domain_permissions.py  test_domain_tree.py  test_engine.py  test_errors.py  test_escalation.py  test_factory.py  test_hierarchy.py  test_isolation.py  test_metadata_isolation.py  test_models.py  test_ownership.py  test_packaging.py  test_policy_refs.py  test_public_api.py  test_routing.py  test_service.py  test_store_directory.py  test_store_protocol.py  test_tenants_members.py
work/: LICENSE  README.md  pyproject.toml
work/tests/: test_lifecycle.py  test_packaging.py  test_public_api.py
workflow/: LICENSE  PLAN.md  README.md  pyproject.toml
workflow/tests/: test_adapter_stubs.py  test_engine_handlers.py  test_engine_protocol.py  test_handlers.py  test_induction.py  test_langgraph_engine.py  test_models.py  test_packaging.py  test_public_api.py  test_scope.py  test_store.py
workspace/: PLAN.md  README.md  pyproject.toml
workspace/tests/: test_adapter_stubs.py  test_backend_protocol.py  test_desk.py  test_handoff_compact.py  test_integrations_mcp.py  test_integrations_memory.py  test_integrations_organization.py  test_isolation.py  test_local_exec.py  test_local_files.py  test_models.py  test_packaging.py  test_persistence.py  test_policy.py  test_public_api.py  test_scope.py
(+819 files in other folders)
