[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coactra-agent"
version = "0.2.0"
description = "Thin composition/policy layer that wires an AI agent over mature protocols — mid-session MCP mounting (next-safe-turn), RFC 8693 delegated identity (no token passthrough), and collaboration policy over A2A."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "coactra authors" }]
keywords = ["llm", "agents", "mcp", "a2a", "rfc8693", "agent-runtime", "composition"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.7",
]

[project.optional-dependencies]
# The five optional sibling distributions this library can wire together. The core imports none of
# them: it consumes local port Protocols with in-process fakes. Optional adapters under
# `coactra.agent.integrations` import sibling facades lazily when the full stack is used.
siblings = [
    "coactra-ai",
    "coactra-memory",
    "coactra-workspace",
    "coactra-orchestration",
    "coactra-organization",
]
mcp = ["fastmcp>=2"]
a2a = ["a2a-sdk>=1.0,<2.0"]
oauth = ["authlib>=1.3", "httpx>=0.27"]
agent = ["pydantic-ai-slim>=1.0"]
# `agents` (openai-agents) is intentionally NOT an extra yet: this plan exposes the toolset
# (mounting.active_tools + the begin_turn invalidate callback) for whatever runner drives
# the model; it does not yet wrap the OpenAI Agents runner. Add an `agents` extra + an
# AgentRunnerPort seam only when that integration is actually built (YAGNI until then).
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.5", "pydantic-ai-slim>=1.0"]

[project.urls]
Homepage = "https://github.com/DataOpsFusion/coactra"
Repository = "https://github.com/DataOpsFusion/coactra"
Issues = "https://github.com/DataOpsFusion/coactra/issues"

[tool.hatch.build.targets.wheel]
# PEP 420 namespace: ship the coactra/ dir WITHOUT a top-level coactra/__init__.py
packages = ["src/coactra"]

[tool.hatch.build.targets.sdist]
include = ["src/coactra", "README.md", "tests"]

# The siblings have no PyPI release yet; when present they resolve from the local monorepo.
# uv-only (pip ignores this table); the default test path does not need them. Note the
# lib-ai distribution lives in the `lib-ai/` directory, not `ai/`.
[tool.uv.sources]
coactra-ai = { path = "../lib-ai", editable = true }
coactra-memory = { path = "../memory", editable = true }
coactra-workspace = { path = "../workspace", editable = true }
coactra-orchestration = { path = "../orchestration", editable = true }
coactra-organization = { path = "../organization", editable = true }

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
