[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "coactra"
dynamic = ["version"]
description = "Composable libraries for AI agent fleets — model calls, memory, workspace, workflow, team, and agent composition in one package."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "coactra authors" }]
keywords = ["llm", "agents", "workflow", "agent-framework", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["pydantic>=2.7,<3"]

[project.optional-dependencies]
# --- Capability extras (each = its origin package's base deps, minus the pydantic core). ---
ai = ["instructor>=1.0,<2", "litellm>=1.40,<2", "numpy>=1.26"]
memory = []
workspace = []
workflow = ["pyyaml>=6.0"]
team = ["sqlmodel>=0.0.21"]
agent = ["pydantic-ai-slim>=1.0,<2"]
agent-gateway = ["pydantic-ai-slim[mcp]>=1.0,<2", "mcp>=1.24", "httpx>=0.27"]

# --- Backend / integration extras (real, kept; intentionally OUT of `all`). ---
chroma = ["chromadb>=0.5"]
tiktoken = ["tiktoken>=0.7"]
mem0 = ["mem0ai>=0.1,<1"]
graphiti = ["graphiti-core>=0.3"]
graphiti-ai = ["graphiti-core>=0.3", "coactra[ai]"]
office = ["pyyaml>=6.0", "tiktoken>=0.7"]
oauth = ["authlib>=1.3", "httpx>=0.27"]
a2a = ["a2a-sdk>=1.0,<2.0", "starlette>=0.37", "sse-starlette>=2.0"]
langgraph = [
    "langgraph>=1.0",
    "langgraph-checkpoint>=2.0",
    "langgraph-checkpoint-sqlite>=3.0",
    "Jinja2>=3.1",
    "cel-python>=0.5,<0.6",
]
dbos = ["dbos>=2,<3"]
dapr = ["dapr-ext-workflow"]
temporal = ["temporalio>=1,<2"]
prefect = ["prefect>=3"]
cloudevents = ["cloudevents>=1,<2"]
fsspec = ["fsspec"]
sql = ["sqlalchemy>=2.0"]
otel = ["opentelemetry-api>=1,<2"]
postgres = ["psycopg[binary]>=3"]
openfga = ["openfga_sdk>=0.9,<1"]
integrations = [
    "coactra[ai]",
    "coactra[team]",
    "structlog>=24.0",
    "pyyaml>=6.0",
    "tiktoken>=0.7",
    "cel-python>=0.5,<0.6",
    "Jinja2>=3.1",
    "langgraph-checkpoint>=2.0",
    "langgraph-checkpoint-sqlite>=3.0",
    "langgraph>=1.0",
    "dbos>=2,<3",
    "dapr-ext-workflow",
    "temporalio>=1,<2",
    "prefect>=3",
    "a2a-sdk>=1,<2",
    "cloudevents>=1,<2",
    "fsspec",
    "sqlalchemy>=2.0",
    "opentelemetry-api>=1,<2",
]

# --- `all` = union of the capability extras only (no backends), so installing it adds
# nothing currently absent from a dev environment and keeps absence-gated tests skipping. ---
all = [
    "instructor>=1.0,<2",
    "litellm>=1.40,<2",
    "numpy>=1.26",
    "sqlmodel>=0.0.21",
    "pydantic-ai-slim>=1.0,<2",
]

dev = ["pytest>=8", "pytest-asyncio>=0.23", "pytest-cov>=5", "ruff>=0.8", "pyright>=1.1"]

[project.urls]
Homepage = "https://github.com/DataOpsFusion/coactra"
Repository = "https://github.com/DataOpsFusion/coactra"
Documentation = "https://dataopsfusion.github.io/coactra/"
Changelog = "https://github.com/DataOpsFusion/coactra/blob/main/CHANGELOG.md"
Issues = "https://github.com/DataOpsFusion/coactra/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
# The package pyproject lives in ./coactra while Git tags live at the repository root.
root = ".."
fallback_version = "0.0.0"

[tool.hatch.build.targets.wheel]
# coactra has a top-level __init__.py with lazy PEP 562 exports (Agent, Run).
packages = ["src/coactra"]

[tool.hatch.build.targets.sdist]
include = ["src/coactra", "README.md", "LICENSE", "../CHANGELOG.md", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
# Duplicate test basenames live in disjoint tests/<pkg>/ subdirs with no __init__.py;
# importlib mode lets pytest collect them without "import file mismatch" errors.
markers = [
    "live: hits external services; excluded from default test run",
]
addopts = "--import-mode=importlib -m 'not live'"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B", "A", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Lazy PEP 562 exports: names resolve via __getattr__, not module-level defs.
"**/ai/embedding.py" = ["F822"]

[tool.pyright]
include = [
    "src/coactra/__init__.py",
    "src/coactra/errors.py",
    "src/coactra/scope.py",
    "src/coactra/_routing.py",
    "src/coactra/_version.py",
    "src/coactra/agent",
    "src/coactra/team/facade.py",
    "src/coactra/memory/facade.py",
    "src/coactra/memory/types.py",
    "src/coactra/workspace",
    "src/coactra/workflow/playbook.py",
    "src/coactra/workflow/domain",
]
exclude = ["**/integrations/**"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = "warning"
