[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fleetlib-ai"
version = "0.1.0"
description = "Model-call shelf + reasoning capture-replay for AI agent fleets."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "instructor>=1.0",
    "litellm>=1.40",
    "pydantic>=2.6",
    "numpy>=1.26",
]

[project.optional-dependencies]
chroma = ["chromadb>=0.5"]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/fleetlib"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
