[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coactra-ai"
version = "0.2.0"
description = "Model-call shelf + reasoning capture-replay for AI agent fleets."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "coactra authors" }]
keywords = ["llm", "agents", "reasoning", "structured-output", "litellm", "instructor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "instructor>=1.0",
    "litellm>=1.40",
    "pydantic>=2.6",
    "numpy>=1.26",
]

[project.optional-dependencies]
chroma = ["chromadb>=0.5"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://example.invalid/coactra"  # TODO: set real repo URL before PyPI

[tool.hatch.build.targets.wheel]
packages = ["src/coactra"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
