[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fleetlib-memory"
version = "0.2.0"
description = "Thin, clean async connector to long-term memory engines (mem0 / Graphiti) behind one MemoryBackend Protocol."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = ["pydantic>=2.7"]

[project.optional-dependencies]
mem0 = ["mem0ai>=0.1"]
graphiti = ["graphiti-core>=0.3"]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
# PEP 420 namespace: ship the fleetlib/ dir WITHOUT a top-level fleetlib/__init__.py
packages = ["src/fleetlib"]

[tool.hatch.build.targets.sdist]
include = ["src/fleetlib", "README.md", "tests"]
