[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coactra-memory"
version = "0.2.0"
description = "Thin, clean async connector to long-term memory engines (mem0 / Graphiti) behind one MemoryBackend Protocol."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "coactra authors" }]
keywords = ["llm", "agents", "memory", "mem0", "graphiti", "rag", "long-term-memory"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["pydantic>=2.7"]

[project.optional-dependencies]
mem0 = ["mem0ai>=0.1"]
graphiti = ["graphiti-core>=0.3"]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[project.urls]
Homepage = "https://example.invalid/coactra"  # TODO: set real repo URL before PyPI

[tool.hatch.build.targets.wheel]
# PEP 420 namespace: ship the coactra/ dir WITHOUT a top-level coactra/__init__.py
packages = ["src/coactra"]

[tool.hatch.build.targets.sdist]
include = ["src/coactra", "README.md", "tests"]
