[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coactra-orchestration"
version = "0.1.0"
description = "Durable work orders plus reusable agent procedures behind one orchestration API."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "coactra authors" }]
keywords = ["llm", "agents", "orchestration", "workflow", "work-orders", "langgraph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["pydantic>=2.7"]

[project.optional-dependencies]
langgraph = [
    "langgraph>=1.0",
    "langgraph-checkpoint>=2.0",
    "Jinja2>=3.1",
    "cel-python>=0.5,<0.6",
]
dbos = ["dbos>=2,<3"]
dapr = ["dapr-ext-workflow"]
temporal = ["temporalio>=1,<2"]
prefect = ["prefect>=3"]
a2a = ["a2a-sdk>=1,<2"]
cloudevents = ["cloudevents>=1,<2"]
fsspec = ["fsspec"]
sql = ["sqlalchemy>=2.0"]
otel = ["opentelemetry-api>=1,<2"]
integrations = [
    "cel-python>=0.5,<0.6",
    "Jinja2>=3.1",
    "langgraph-checkpoint>=2.0",
    "langgraph>=1.0",
    "dbos>=2,<3",
    "dapr-ext-workflow",
    "temporalio>=1,<2",
    "prefect>=3",
    "a2a-sdk>=1,<2",
    "cloudevents>=1,<2",
    "fsspec",
    "sqlalchemy>=2.0",
    "opentelemetry-api>=1,<2",
]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.urls]
Homepage = "https://github.com/DataOpsFusion/coactra"
Repository = "https://github.com/DataOpsFusion/coactra"
Issues = "https://github.com/DataOpsFusion/coactra/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/coactra"]

[tool.hatch.build.targets.sdist]
include = ["src/coactra", "README.md", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
