[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coactra-organization"
version = "0.2.0"
description = "Multi-tenant, AD-inspired org model for AI fleets — composite OU tree, principals/seats, inherited permissions (block-inheritance + per-member overrides), repository-pattern persistence. No workflow execution."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "coactra authors" }]
keywords = ["llm", "agents", "multi-tenant", "rbac", "org-chart", "permissions"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["sqlmodel>=0.0.21", "pydantic>=2.7"]

[project.optional-dependencies]
neo4j = ["neo4j>=5"]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://example.invalid/coactra"  # TODO: set real repo URL before PyPI

[tool.hatch.build.targets.wheel]
# PEP 420 namespace: ship the coactra/ dir WITHOUT a top-level coactra/__init__.py
packages = ["src/coactra"]

[tool.hatch.build.targets.sdist]
include = ["src/coactra", "README.md", "tests"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
