[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coactra-work"
version = "0.1.0"
description = "Durable, tenant-scoped work orders for agent systems: leases, retries, pause/resume, artifacts, capabilities, and audit events."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "coactra authors" }]
keywords = ["llm", "agents", "work-orders", "tasks", "artifacts", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["pydantic>=2.7"]

[project.optional-dependencies]
dbos = ["dbos>=2,<3"]
dapr = ["dapr-ext-workflow"]
temporal = ["temporalio>=1,<2"]
a2a = ["a2a-sdk>=1,<2"]
cloudevents = ["cloudevents>=1,<2"]
fsspec = ["fsspec"]
otel = ["opentelemetry-api>=1,<2"]
integrations = [
    "dbos>=2,<3",
    "dapr-ext-workflow",
    "temporalio>=1,<2",
    "a2a-sdk>=1,<2",
    "cloudevents>=1,<2",
    "fsspec",
    "opentelemetry-api>=1,<2",
]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.urls]
Homepage = "https://example.invalid/coactra"  # TODO: set real repo URL before PyPI

[tool.hatch.build.targets.wheel]
# PEP 420 namespace: ship the coactra/ dir WITHOUT a top-level coactra/__init__.py
packages = ["src/coactra"]

[tool.hatch.build.targets.sdist]
include = ["src/coactra", "README.md", "tests"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
