[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fleetlib-workflow"
version = "0.1.0"
description = "Thin, learnable workflow layer over a durable engine (LangGraph) for AI agent fleets — procedure-as-data, induced or authored, with collaboration + escalation steps."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = ["pydantic>=2.7", "langgraph>=0.2"]

[project.optional-dependencies]
temporal = ["temporalio>=1.7"]
prefect = ["prefect>=3"]
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
# PEP 420 namespace: ship the fleetlib/ dir WITHOUT a top-level fleetlib/__init__.py
packages = ["src/fleetlib"]

[tool.hatch.build.targets.sdist]
include = ["src/fleetlib", "README.md", "tests"]
