[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fleetlib-workspace"
version = "0.1.0"
description = "The persistent agent desk — a thin control layer over swappable sandbox backends (files / CLI policy / handoff / auto-compact / capability manifest)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = ["pydantic>=2.7"]

[project.optional-dependencies]
daytona = ["daytona-sdk>=0.10"]
e2b = ["e2b>=1.0"]
openhands = []  # no pinned dep yet; stub adapter only
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
# PEP 420 namespace: ship the fleetlib/ dir WITHOUT a top-level fleetlib/__init__.py
packages = ["src/fleetlib"]

[tool.hatch.build.targets.sdist]
include = ["src/fleetlib", "README.md", "tests"]
