[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fleetlib-workspace"
version = "0.1.0"
description = "The persistent agent desk — a thin control layer over swappable sandbox backends (files / CLI policy / handoff / auto-compact / capability manifest)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "fleetlib authors" }]
keywords = ["llm", "agents", "workspace", "sandbox", "filesystem", "agent-desk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["pydantic>=2.7"]

[project.optional-dependencies]
daytona = ["daytona-sdk>=0.10"]
e2b = ["e2b>=1.0"]
openhands = []  # no pinned dep yet; stub adapter only
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://example.invalid/fleetlib"  # TODO: set real repo URL before PyPI

[tool.hatch.build.targets.wheel]
# PEP 420 namespace: ship the fleetlib/ dir WITHOUT a top-level fleetlib/__init__.py
packages = ["src/fleetlib"]

[tool.hatch.build.targets.sdist]
include = ["src/fleetlib", "README.md", "tests"]
