[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coactra-workspace"
version = "0.1.0"
description = "The persistent agent desk — a thin control layer over swappable sandbox backends (files / CLI policy / handoff / auto-compact / capability manifest)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "coactra authors" }]
keywords = ["llm", "agents", "workspace", "sandbox", "filesystem", "agent-desk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["pydantic>=2.7"]

[project.optional-dependencies]
office = ["pyyaml>=6.0", "tiktoken>=0.7"]
memory = ["coactra-memory>=0.2", "structlog>=24.0"]
directory = ["coactra-directory>=0.2"]
organization = ["coactra-directory>=0.2"]
mcp = []  # server registration is duck typed; FastMCP is supplied by the host
workflow = []  # candidate drafting uses a caller-provided LLM
integrations = [
    "coactra-memory>=0.2",
    "coactra-directory>=0.2",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "tiktoken>=0.7",
]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.urls]
Homepage = "https://github.com/DataOpsFusion/coactra"
Repository = "https://github.com/DataOpsFusion/coactra"
Issues = "https://github.com/DataOpsFusion/coactra/issues"

[tool.hatch.build.targets.wheel]
# PEP 420 namespace: ship the coactra/ dir WITHOUT a top-level coactra/__init__.py
packages = ["src/coactra"]

[tool.hatch.build.targets.sdist]
include = ["src/coactra", "README.md", "tests"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

# uv-only (ignored by pip, absent from the built wheel): resolve sibling extras
# from the local monorepo instead of PyPI during editable dev installs.
[tool.uv.sources]
coactra-memory = { path = "../memory", editable = true }
coactra-directory = { path = "../directory", editable = true }
